@@ -2344,3 +2344,5 @@
 	* arch/arm/src/lm3s: Add support for the LM3S6432S2E (Contributed by Mike Smith)
 	* configs/lm3s6432-s2:  Add support for the TI RDK-S2E (LM3S6432S2E) board
 	  (Contributed by Mike Smith)
+	* configs/stm3240g-eval/src: Add APIs support to support user access to the
+	  LEDs
